--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/assets/style.css">
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/app.js"></script>
@@ -9,7 +10,9 @@
 </head>
 
 <body>
-    <a href="/scrape"><button type="button" href='/test'></button></a>
+    <a href="/scrape">
+        <button type="button" href='/test'>scrape</button>
+    </a>
     {{{ body }}}
 </body>
 
