--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
         <div class="col-xs-9 text-center">
             <p>{{this.title}}.</p>
             <a href={{this.link}}>{{this.link}}</a>
-            <button data-id={{this._id}} id="savenote">Add Comment</button>
+            <button data-id={{this._id}} id="addcomment">Add Comment</button>
         </div>
         <hr> {{/each}}
     </div>
